tests/expectations/compiler/finalize/private_input_ouput_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found 'async'
    --> compiler-test:4:9
     |
   4 |         async finalize_foo(a);
     |         ^^^^^
